fixtures/validation/ui-toolkit-graphics-package/invalid/display-name-too-long/Layout/MainMenu.uxml
<ui:UXML xmlns:ui="UnityEngine.UIElements">
  <ui:VisualElement name="main-menu-root" />
</ui:UXML>
